Fix overflow break more options button. - Update table scroll.

--- a/src/components/AddScanBoard/SelectTargetBoard/SelectTargetTable/_index.scss
+++ b/src/components/AddScanBoard/SelectTargetBoard/SelectTargetTable/_index.scss
@@ -3,7 +3,6 @@
 div.select-target-table-container {
     color: $black-color-3;
     font-size: 0.875rem;
-    min-width: $SM;
     width: 100%;
 
     ul li {
