--- a/src/components/Buttons/_index.scss
+++ b/src/components/Buttons/_index.scss
@@ -1,6 +1,7 @@
 @use '../../style/variables' as *;
 
-div.more-options-button {
+div.more-options-button,
+.more-options-portal {
     align-items: center;
     align-self: center;
     color: $black-color-2;
@@ -20,22 +21,24 @@ div.more-options-button {
         }
     }
 
-    div.options {
+    div.options,
+    &.options {
         background-color: $black-color-7;
         border-radius: $app-border-radius;
         box-shadow: $secondary-button-shadow;
-        display: inherit !important;
+        display: flex !important;
         flex-direction: column !important;
         overflow: hidden;
         padding: 0.315rem 0;
         position: absolute;
-        top: 2rem;
         white-space: nowrap;
         z-index: 10;
 
         span.option-item {
             cursor: pointer;
             padding: 0.375rem 1rem;
+            text-align: center;
+            width: 100%;
 
             &:hover {
                 background-color: $black-color-6;
