--- a/src/components/ResultsBoard/ResultsTable/_index.scss
+++ b/src/components/ResultsBoard/ResultsTable/_index.scss
@@ -3,9 +3,8 @@
 div.results-table-container {
     color: $black-color-3;
     font-size: 0.875rem;
-    min-width: $SM;
     width: 100%;
-    
+
     ul li {
         align-items: center;
         justify-content: center;
